GNOME Bugzilla – Bug 705279
keyboard/input-chooser: Avoid dereference of possible NULL pointer
Last modified: 2013-08-01 15:04:33 UTC
child_info can be NULL if the before_info is valid stopping the update_separator_filter function from returning.
Created attachment 250605 [details] [review] keyboard/input-chooser: Avoid dereference of possible NULL pointer
Review of attachment 250605 [details] [review]: OK.
push master: 6da09ba1ac061213958bc790f633f1a4fa8e7ca0