keyboard/input-chooser: Avoid dereference of possible NULL pointer

child_info can be NULL if the before_info is valid stopping the
update_separator_filter function from returning.

https://bugzilla.gnome.org/show_bug.cgi?id=705279